Add notifications to swagger docs and add json responses
